Changelog 1.4.0.3 Beta (2014-10-18)

[Main]
fixed: bug with MovieSet (reload all movies to fix existing and wrong sets)
fixed: error while "Reload all MovieSets"
fixed: missing movie list sorting after first start
fixed: movie/movieset list does not refresh title for search bar
fixed: FileInfo and StreamEditor
added: external Subtitles preview in Edit Movie dialog
added: filter "Only one Movie" to MovieSet filter


Changelog 1.4.0.2 Beta (2014-10-17)

[Main]
fixed: issue with episode recognising


Changelog 1.4.x Beta (2014-10-17)

[Main]
added: MovieSet title renamer (auto rename titles like "Hangover Reihe" to "Hangover Collection")
added: missing icons for sd video sources
added: more video sources
added: clean MovieSet DB on update
added: delete images with MovieSets
added: filters for MovieSets
added: filters for TV Shows (beta)
added: search bar for MovieSets
added: search bar for TV Shows
added: exclude directories (you can add directories who will be completely ignored by Ember)
added: search bar in Edit MovieSet dialog
added: key sensitive movie list in Edit MovieSet dialog
added: setting to set the release date in US format (yyyy-mm-dd)
added: more settings for MovieSets
added: missing locks
added: scrape global episode runtime for tv shows from TVDB
added: runtime in tv show and episode NFO
added: use Show Runtime for Episodes if no Episode Runtime can be found
added: a Movie source can set as "exclude from DB update" like in XBMC
added: filter "Country" to Movie filters
added: [none] to genre filter to find movies/tv shows without genre
added: ListTile and sort tokens for tv shows
added: "Cleanup disabled fields" for movie scraper
added: HD-Trailers.net and Davestrailerpage.com as additional trailer scrapers
added: "* All Seasons" to season list
added: "Display Image Names" for main window (like "ClearArt", "Landscape")
added: XBMC <StereoMode> tag in NFO
added: full MKV 3D support